Add map,routes and ui style

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/images/WeatherAppLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wasserstoff Whether App</title>
+     <link rel="stylesheet" href="https://cdn.maptiler.com/maptiler-sdk-js/v2.0.3/maptiler-sdk.css"/>
+     <script src="https://cdn.maptiler.com/maptiler-sdk-js/v2.0.3/maptiler-sdk.umd.min.js" defer ></script>
+   <script src="https://cdn.maptiler.com/maptiler-weather/v2.0.0/maptiler-weather.umd.min.js" defer ></script>
   </head>
   <body>
     <div id="root"></div>
